Fix link's color and remove whitespace

--- a/src/components/Landing/style.css
+++ b/src/components/Landing/style.css
@@ -23,19 +23,20 @@
   letter-spacing: .025em;
 }
 .subTitle{
-    margin-top:-15px;
-    font-weight:500;
-    font-size:.9em;
+  margin-top:-15px;
+  font-weight:500;
+  font-size:.9em;
 }
 .countryUnderlined{
   font-weight:700;
   font-size:1em;
   text-decoration: underline;
   cursor:pointer;
+  color: #262261;
 }
 .profileStoryWrapper {
   margin-top: 10%;
- line-height:.5;
+  line-height:.5;
 }
 .paragraphsWrapper{
   font-weight:500;
